[package]
authors = ["Marcus Geiger"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface the BOSCH BMP085 pressure sensor"
edition = "2018"
keywords = ["embedded-hal-driver", "pressure", "thermometer"]
license = "MIT OR Apache-2.0"
name = "bmp085-driver"
readme = "README.md"
repository = "https://github.com/bwolf/bmp085-driver"
version = "0.1.4"

[features]
default = ["libm"]

[dependencies]
hal = { package = "embedded-hal", version = "0.2.0" }
generic-array = "0.11.0"
libm = { version = "0.1.2", optional = true }

[dependencies.cast]
default-features = false
version = "0.2.2"
